<resources>
    <string name="app_name">Flipped</string>

    <string name="bandwagon">搬瓦工</string>

    <string name="movie_in_theaters">正在热映</string>
    <string name="movie_coming_soon">即将上映</string>
    <string name="movie_top250">TOP250</string>
    <string name="movie_weekly">一周口碑榜</string>
    <string name="movie_us_box">北美票房榜</string>

    <string name="load_more_fail">加载失败，点击重试</string>
    <string name="the_end">THE END</string>

    <string name="beijing">北京</string>
    <string name="shanghai">上海</string>
    <string name="guangzhou">广州</string>
    <string name="shenzhen">深圳</string>
    <string name="shaoyang">邵阳</string>

    <string name="dou_ban_rating">豆瓣评分</string>
    <string name="no_rating">暂无评分</string>
    <string name="this_week_release">本%1$s上映</string>
    <string name="next_week_release">下%1$s上映</string>
    <string name="other_release">%1$s 上映</string>
    <string name="item_directors">导演：%1$s</string>
    <string name="item_casts">演员：%1$s</string>

    <string name="mainland_china">中国大陆</string>
    <string name="star_1">★</string>
    <string name="star_2">★★</string>
    <string name="star_3">★★★</string>
    <string name="star_4">★★★★</string>
    <string name="star_5">★★★★★</string>
    <string name="view_more">查看更多</string>
    <string name="comment">短评</string>

    <string name="cast_and_credits">演职人员</string>
    <string name="directors">导演</string>
    <string name="casts">演员</string>
    <string name="original_title">原名</string>
    <string name="genres">类型</string>
    <string name="countries">国家或地区</string>
    <string name="languages">语言</string>
    <string name="pub_dates">上映日期</string>
    <string name="durations">片长</string>
    <string name="aka">别名</string>

    <string name="add_bandwagon">添加主机</string>
    <string name="edit_bandwagon">编辑主机</string>
    <string name="title">标题</string>
    <string name="ve_id">VEID</string>
    <string name="api_key">API KEY</string>
    <string name="hostname">主机名</string>
    <string name="vm_type">主机类型</string>
    <string name="node_location">所在地</string>
    <string name="os">操作系统</string>
    <string name="ip_address">IP地址</string>
    <string name="ssh_port">SSH端口</string>
    <string name="status">状态</string>
    <string name="cpu_load">CPU负载</string>
    <string name="cpu_load_info_ovz">%1$s processes; LA: %2$s</string>
    <string name="cpu_load_info_kvm">LA: %1$s</string>
    <string name="ram">内存</string>
    <string name="swap">虚拟内存</string>
    <string name="disk_usage">磁盘使用情况</string>
    <string name="bandwidth_usage">流量使用情况</string>
    <string name="resets">重置：%1$s</string>
    <string name="data_multiplier">高级带宽乘数：%1$.3f</string>

    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="reboot">重启</string>
    <string name="kill">杀死</string>
    <string name="more">更多</string>

    <string name="days_widget_label">天数</string>
    <string name="text_widget_label">文本</string>
    <string name="apply">应用</string>
    <string name="countdown">倒计时</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="style">样式</string>
    <string name="title_size">标题大小</string>
    <string name="title_color">标题颜色</string>
    <string name="days_color_same_as_title_color">天数颜色与标题颜色一致</string>
    <string name="days_size">天数大小</string>
    <string name="days_color">天数颜色</string>
    <string name="title_color_same_as_days_color">标题颜色与天数颜色一致</string>
    <string name="days_widget_days">第%1$d天</string>
    <string name="days_widget_days_today">就是今天</string>
    <string name="days_widget_days_left">还有%1$d天</string>

    <string name="widget_title_check_hint">请输入标题</string>
    <string name="widget_date_check_hint">请选择日期</string>

    <string name="a">A</string>
    <string name="r">R</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="zero">0</string>

    <string name="alignment">对齐方式</string>
    <string name="top_left">左上</string>
    <string name="top_right">右上</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_right">右下</string>
    <string name="center">居中</string>
    <string name="center_top">顶部居中</string>
    <string name="center_bottom">底部居中</string>
    <string name="center_left">左边居中</string>
    <string name="center_right">右边居中</string>
</resources>