<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="13"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <AutoCompleteTextView
            android:id="@+id/textVeId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ve_id"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <AutoCompleteTextView
            android:id="@+id/textApiKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/api_key"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>